All works fine until DataIngestResearch

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\karth\\\\Documents\\\\EtE_prj\\\\Chicken-Disease-Classification\\\\research'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%pwd"
    ]
@@ -35,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\vxs8426\\\\OneDrive - International Flavors & Fragrances Inc\\\\Documents\\\\learning Projects\\\\Chicken-Disease-Classification'"
+       "'c:\\\\Users\\\\karth\\\\Documents\\\\EtE_prj\\\\Chicken-Disease-Classification'"
       ]
      },
      "execution_count": 4,
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +77,14 @@
     "    local_data_file: Path\n",
     "    unzip_dir: Path\n",
     "\n",
-    "    # DataIngestionConfig is an entity. if one function defined with return type as this entity,\n",
-    "    #  that function should return 4 variable values (with data type defined) as mentioned in entity"
+    "    # DataIngestionConfig is an entity. if one function defined with return type as this entity( DataIngestionConfig),\n",
+    "    #  that function should return 4 variable values (with data type defined) as mentioned in entity\n",
+    "    # "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +93,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining ConfigurationManager for bringing configuration info for Data Ingestion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,13 +130,13 @@
     "            unzip_dir=config.unzip_dir \n",
     "        ) #bringing data ingestion config information in format defined in DataIngestionConfig entity\n",
     "\n",
-    "        return data_ingestion_config\n",
+    "        return data_ingestion_config  # returning a entity which is type DataIngestionConfig. Contains attributes for the data ingestion\n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining data ingestion class(downloading and unzipping the file)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +168,8 @@
     "\n",
     "    \n",
     "    def download_file(self):\n",
-    "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename, headers = request.urlretrieve(\n",
+    "        if not os.path.exists(self.config.local_data_file):# If zip file not exists, download\n",
+    "            filename, headers = request.urlretrieve( # It's downloads the zip file from url\n",
     "                url = self.config.source_URL,\n",
     "                filename = self.config.local_data_file\n",
     "            )\n",
@@ -152,7 +178,7 @@
     "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
     "\n",
     "\n",
-    "    \n",
+    "    # It unzips the file which downloaded from url \n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
     "        zip_file_path: str\n",
@@ -166,19 +192,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline for Data Ingestion. It will Perform Data Ingestion in action"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-11-29 22:42:35,864:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-11-29 22:42:35,866:INFO:common:yaml file: params.yaml loaded successfully]\n",
-      "[2023-11-29 22:42:35,866:INFO:common:created directory at: artifacts]\n",
-      "[2023-11-29 22:42:35,866:INFO:common:created directory at: artifacts/data_ingestion]\n",
-      "[2023-11-29 22:42:41,660:INFO:4037744573:artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2024-02-25 06:22:58,290: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-02-25 06:22:58,293: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-02-25 06:22:58,295: INFO: common: created directory at: artifacts]\n",
+      "[2024-02-25 06:22:58,296: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-02-25 06:23:02,766: INFO: 2055231800: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 11616915\n",
       "Cache-Control: max-age=300\n",
@@ -189,26 +222,27 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 0B9E:6FF6:4D8B95:5DF1EF:65677101\n",
+      "X-GitHub-Request-Id: 7438:27432B:C75B2:11BEB1:65DA8F68\n",
       "Accept-Ranges: bytes\n",
-      "Date: Wed, 29 Nov 2023 17:12:39 GMT\n",
+      "Date: Sun, 25 Feb 2024 00:52:59 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-maa10220-MAA\n",
+      "X-Served-By: cache-maa10223-MAA\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1701277957.574899,VS0,VE2628\n",
+      "X-Timer: S1708822379.186631,VS0,VE681\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 2940ededc0804a21f704c2369838bc2bd272f458\n",
-      "Expires: Wed, 29 Nov 2023 17:17:39 GMT\n",
-      "Source-Age: 2\n",
+      "X-Fastly-Request-ID: 38767e4d0c5f6b24b5bb9ec12ad9e1aece895795\n",
+      "Expires: Sun, 25 Feb 2024 00:57:59 GMT\n",
+      "Source-Age: 0\n",
       "\n",
       "]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
@@ -236,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
