Done modifications upto prepare call backs completely.

--- a/research/03_prepare_callbacks.ipynb
+++ b/research/03_prepare_callbacks.ipynb
@@ -19,17 +19,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## About callbacks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* software development, especially in frameworks like TensorFlow or Keras for building neural networks, \"callbacks\" are functions that are called at specific points during the training of a model. These callbacks serve various purposes, such as logging information, saving model checkpoints, adjusting learning rates dynamically, or stopping training early based on certain conditions.\n",
+    "\n",
+    "* \"Prepare callbacks\" typically refer to a subset of callbacks that are invoked before the training begins. They allow you to set up the environment or configure certain aspects of the training process. Here are some common tasks that \"prepare callbacks\" might handle\n",
+    "\n",
+    "1. Data Preprocessing: Callbacks can be used to preprocess the data before feeding it into the model. This might involve normalization, resizing, or any other preprocessing steps necessary to prepare the data for training.\n",
+    "\n",
+    "2. Model Initialization: You might want to initialize the model or its parameters in a specific way before training begins. Callbacks can be used to perform such initialization tasks.\n",
+    "\n",
+    "3. Setting up Logging: Callbacks can set up logging mechanisms to track various metrics during training, such as loss, accuracy, or any other custom metrics.\n",
+    "\n",
+    "4. Preparing Learning Rate Schedules: If you plan to use learning rate schedules during training (e.g., decreasing the learning rate over time), you can set up these schedules using callbacks before training starts.\n",
+    "\n",
+    "5. Configuring Early Stopping Criteria: Callbacks can be used to configure early stopping criteria based on validation metrics. This allows you to stop training early if the model's performance on a validation set doesn't improve after a certain number of epochs.\n",
+    "\n",
+    "6. Setting up Checkpointing: Callbacks can configure the model to save checkpoints at regular intervals during training. These checkpoints can be used to resume training from a specific point or to evaluate the model's performance on unseen data.\n",
+    "\n",
+    "By using \"prepare callbacks,\" you can customize the training process and ensure that everything is set up correctly before the actual training begins. This modular approach enhances the flexibility and extensibility of the training process, allowing you to tailor it to your specific requirements.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When ever we are creating a model, it will save the metadata on the callbacks folders. When you lauch the tensorboard , you can see the Training graph, how it performing, what is the error ? we can even find the best model out of many epochs. If your model's performance not improving after some point when doing traing we can stop the traing at that point. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\vxs8426\\\\OneDrive - International Flavors & Fragrances Inc\\\\Documents\\\\learning Projects\\\\Chicken-Disease-Classification'"
+       "'c:\\\\Users\\\\karth\\\\Documents\\\\EtE_prj\\\\Chicken-Disease-Classification'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,14 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\vxs8426\\OneDrive - International Flavors & Fragrances Inc\\Documents\\learning Projects\\Chicken-Disease-Classification\n"
+      "[WinError 2] The system cannot find the file specified: 'Chicken-Disease-Classification'\n",
+      "c:\\Users\\karth\\Documents\\EtE_prj\\Chicken-Disease-Classification\\research\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\karth\\.conda\\envs\\chicken\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:393: UserWarning: This is now an optional IPython functionality, using bookmarks requires you to install the `pickleshare` library.\n",
+      "  bkms = self.shell.db.get('bookmarks', {})\n"
      ]
     }
    ],
@@ -142,7 +200,7 @@
     "\n",
     "    \n",
     "    @property\n",
-    "    def _create_tb_callbacks(self):\n",
+    "    def _create_tb_callbacks(self): # When running code at some time, it will create a folder with that timestamp and stores the logs \n",
     "        timestamp = time.strftime(\"%Y-%m-%d-%H-%M-%S\") #Getting timestamp\n",
     "        tb_running_log_dir = os.path.join(\n",
     "            self.config.tensorboard_root_log_dir,\n",
@@ -152,13 +210,13 @@
     "    \n",
     "\n",
     "    @property\n",
-    "    def _create_ckpt_callbacks(self):\n",
+    "    def _create_ckpt_callbacks(self): # It creates a folder and saves check points for a model \n",
     "        return tf.keras.callbacks.ModelCheckpoint(\n",
     "            filepath=str(self.config.checkpoint_model_filepath),\n",
     "            save_best_only=True\n",
     "        )\n",
     "\n",
-    "\n",
+    "# If you wanna get out of checkpoints you can get it from here \n",
     "    def get_tb_ckpt_callbacks(self):\n",
     "        return [\n",
     "            self._create_tb_callbacks,\n",
@@ -233,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
