Upto tensorboard all working fine(2:30)

--- a/basic_codes_to_understand.ipynb
+++ b/basic_codes_to_understand.ipynb
@@ -157,6 +157,15 @@
     "\n",
     "sum (23, \"Hii\") # You will get error here as you did get annotation matched\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tensorboard --logdir artifacts\\prepare_callbacks\\tensorboard_log_dir"
+   ]
   }
  ],
  "metadata": {
