--- a/basic_codes_to_understand.ipynb
+++ b/basic_codes_to_understand.ipynb
@@ -166,6 +166,17 @@
    "source": [
     "# tensorboard --logdir artifacts\\prepare_callbacks\\tensorboard_log_dir"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dvc init\n",
+    "# dvc repro\n",
+    "#dvc dag"
+   ]
   }
  ],
  "metadata": {
